[project]
name = "webview-proc"
version = "0.1.0"
description = "A Python package for running pywebview windows in a separate thread, providing a synchronous API for stable and isolated webview management."
readme = "README.md"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = [
    "pywebview>=4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/username/webview-proc"
Repository = "https://github.com/username/webview-proc"
Issues = "https://github.com/username/webview-proc/issues"
Documentation = "https://github.com/username/webview-proc#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=5.0",
    "mypy>=0.900",
]

[tool.hatch.build.targets.wheel]
packages = ["webview_proc"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.mypy]
python_version = "3.8"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]