[project]
name = "webview-proc"
version = "0.1.0"
description = "A Python package for running pywebview windows in a separate thread, providing a synchronous API for stable and isolated webview management."
readme = "README.md"
authors = [
    { name = "Ilya Pevzner", email = "iap@10xconcepts.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.8"
dependencies = [
    "pywebview>=4.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: User Interfaces",
]

[project.urls]
Homepage = "https://github.com/10x-concepts/webview-proc"
Repository = "https://github.com/10x-concepts/webview-proc"
Issues = "https://github.com/10x-concepts/webview-proc/issues"
Documentation = "https://github.com/10x-concepts/webview-proc#readme"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.13,<0.14",
    "uv>=0.8.19"
]

[tool.hatch.build.targets.wheel]
packages = ["webview_proc"]

